--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   path_provider: ^2.1.5
   path: ^1.9.1
   google_mlkit_face_detection: ^0.13.1
+  shared_preferences: ^2.2.2
+  fl_chart: ^0.66.0
+  intl: ^0.19.0 # For date formatting
 
 dev_dependencies:
   flutter_test:
