--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.2.2
   fl_chart: ^0.66.0
   intl: ^0.19.0 # For date formatting
+  audioplayers: ^6.0.0
 
 dev_dependencies:
   flutter_test:
